--- a/NewFretronWebService/build.gradle
+++ b/NewFretronWebService/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'org.fretron'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,23 +10,14 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.27'
+    compile 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.32'
+    compile 'org.glassfish.jersey.inject:jersey-hk2:2.32'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.19'
-//    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.2.12.v20150709'
-    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.19'
-    compile group: 'org.glassfish.grizzly', name: 'grizzly-http-servlet', version: '2.3.19'
-// https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-http
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '3.0.0-RC2'
+
+        // JAX-B dependencies for JDK 9+
+        implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+        implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 
 
-}
-task hello {
-    doLast {
-        println 'Hello world!'
-    }
-}
-task name{
-    doFirst {
-        println("Welcome")
-    }
 }
